--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,92 @@
-site_name: My Docs
+site_name: Inteligencia Artificial y Big Data
+site_url: https://aitor-medrano.github.io/iabd2223
+use_directory_urls: false
+
+nav:
+  - "Inicio": "index.md"
+  - "UF1 - PIAFP Lara":
+      - "index.md"
+      - "5,6.- Presentacion": "01presentacion.md"
 
 theme:
-  name: material
+  language: es
+  name: "material"
+  favicon: "images/favicon.png"
+  palette:
+    primary: indigo
+    accent: "light blue"
+  font:
+    text: Roboto
+    code: Roboto Mono
+  logo: "images/logoIABD3.png"
+  features:
+    - header.autohide
+    - navigation.top
+    - navigation.tracking
+    - navigation.indexes
+    - content.code.annotate
+    - announce.dismiss
+
+extra_css:
+  - stylesheets/extra.css
+
+extra:
+  search:
+    language: "es"
+  social:
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/aitormedrano
+    - icon: fontawesome/solid/envelope
+      link: mailto:<a.medrano@edu.gva.es>
+  consent:
+    title: Consentimiento de cookie
+    description: >-
+      Esta página de apuntes utiliza cookies para reconocer las visitas, medir la efectividad de la documentación
+      y averiguar si encuentras aquello que buscas o cómo has llegado a estos apuntes.
+      Con tu consentimiento, me ayudas a mejorar estos materiales.
+
+  analytics:
+    provider: google
+    property: G-MFP4QLMMV7
+    feedback:
+      title: ¿Ha sido útil está página?
+      ratings:
+        - icon: material/emoticon-happy-outline
+          name: Sí, ha sido util
+          data: 1
+          note: >-
+            Gracias por tu colaboración!
+        - icon: material/emoticon-sad-outline
+          name: La página es mejorable
+          data: 0
+          note: >-
+            Gracias por tu colaboración! Ayúdame a mejorarla enviandome un mail a <a href="mailto:a.medrano@edu.gva.es">a.medrano@edu.gva.es</a> con tus comentarios.
+
+plugins:
+  - search
+#  - git-revision-date-localized:
+#      enable_creation_date: true
+
+markdown_extensions:
+  - abbr
+  - attr_list
+  - admonition
+  - pymdownx.highlight:
+      linenums: true
+      linenums_style: pymdownx-inline
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.superfences
+  - pymdownx.caret
+  - pymdownx.mark
+  - pymdownx.tilde
+  - footnotes
+  - meta
+  - sane_lists
+  - toc:
+      permalink: true
+      toc_depth: 3
+
+copyright: 2022-2023 Aitor Medrano / José Robledano - Licencia CC BY-NC-SA
+# docker run --name=mkdocs -v "C:\Users\Aitor\OneDrive - Conselleria d'Educació\2122\bigdata:/app" -w /app/doc -p 8000:8000 minidocks/mkdocs serve -a 0.0.0.0:8000 -t material
+# docker run --name=mkdocs -v "C:\Users\Aitor\OneDrive - Conselleria d'Educació\2122\bigdata:/app" -w /app/mkdocs -p 8000:8000 minidocks/mkdocs serve -a 0.0.0.0:8000 -t material
