sesion 1 de planificación - planteada

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Inteligencia Artificial y Big Data
-site_url: https://aitor-medrano.github.io/iabd2223
+site_url: https://aitor-medrano.github.io/pia2223
 use_directory_urls: false
 
 nav:
