--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /.DS_Store
-/site/
+site/
+site/01presentacion.html
+site/sitemap.xml.gz
+site/404.html
+.gitignore
+site/sitemap.xml
+site/sitemap.xml.gz
+site/search/search_index.json
