--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,12 +4,19 @@ use_directory_urls: false
 
 nav:
   - "Inicio": "index.md"
-  - "UF1 - PIAFP Lara":
-      - "index.md"
+  - "PIAFP Lara":
       - "Reto 1 - Presentación": "01presentacion.md"
       - "Reto 2 - Prototipado": "02requisitos.md"
       - "Reto 2 - Visita IES Victoria Kent": "03visitaVK.md"
       - "Reto 2 - Almacenamiento datos": "04almacenamiento.md"
+      - "Reto 2 - Almacenamiento audio": "05audio.md"
+      - "Reto 3 - Generando el dataset": "11dataset.md"
+  - "PIAFP Autoponic":
+      - "Reto 1 - Presentación": "06autoponic.md"
+      - "Reto 1 - Visita IES Navarro Santafé": "07navarrosantafe.md"
+      - "Reto 6 - Modelado de datos": "08timeseries.md"
+      - "Reto 6 - Cuadro de mandos": "09powerbi.md"
+      - "Reto 6 - Actuadores": "10actuadores.md"
 
 theme:
   language: es
@@ -26,12 +33,12 @@ theme:
     - header.autohide
     - navigation.top
     - navigation.tracking
+    - navigation.footer
     - navigation.indexes
     - content.code.annotate
     - announce.dismiss
-
-extra_css:
-  - stylesheets/extra.css
+    - toc.follow
+    - content.code.copy
 
 extra:
   search:
@@ -52,18 +59,18 @@ extra:
     provider: google
     property: G-MFP4QLMMV7
     feedback:
-      title: ¿Ha sido útil está página?
+      title: <a href='https://ko-fi.com/T6T8GWT9N' title='Invítame a un café en ko-fi.com' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi2.png?v=3' border='0' alt='Invítame a un café en ko-fi.com' /></a>
       ratings:
         - icon: material/emoticon-happy-outline
-          name: Sí, ha sido util
+          name: Me encantan estos apuntes
           data: 1
           note: >-
-            Gracias por tu colaboración!
+            Gracias por tu tiempo. Si quieres me puedes <a href='https://ko-fi.com/T6T8GWT9N'>invitar a un café en ko-fi</a>.
         - icon: material/emoticon-sad-outline
-          name: La página es mejorable
+          name: Los apuntes son mejorables
           data: 0
           note: >-
-            Gracias por tu colaboración! Ayúdame a mejorarla enviandome un mail a <a href="mailto:a.medrano@edu.gva.es">a.medrano@edu.gva.es</a> con tus comentarios.
+            ¡Gracias por tu colaboración! Ayúdame a mejorar los apuntes enviándome un mail a <a href="mailto:a.medrano@edu.gva.es">a.medrano@edu.gva.es</a> con tus comentarios.
 
 plugins:
   - search
@@ -91,5 +98,3 @@ markdown_extensions:
       toc_depth: 3
 
 copyright: 2022-2023 Aitor Medrano / José Robledano - Licencia CC BY-NC-SA
-# docker run --name=mkdocs -v "C:\Users\Aitor\OneDrive - Conselleria d'Educació\2122\bigdata:/app" -w /app/doc -p 8000:8000 minidocks/mkdocs serve -a 0.0.0.0:8000 -t material
-# docker run --name=mkdocs -v "C:\Users\Aitor\OneDrive - Conselleria d'Educació\2122\bigdata:/app" -w /app/mkdocs -p 8000:8000 minidocks/mkdocs serve -a 0.0.0.0:8000 -t material
